--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/ansible,windows,macos,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=ansible,windows,macos,linux
+# Created by https://www.toptal.com/developers/gitignore/api/linux,macos,ansible,windows,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,ansible,windows,visualstudiocode
 
 ### Ansible ###
 *.retry
@@ -52,6 +52,25 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -78,4 +97,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/ansible,windows,macos,linux
+# End of https://www.toptal.com/developers/gitignore/api/linux,macos,ansible,windows,visualstudiocode
