--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
-
 - name: Ensure destination for compose file exists
   ansible.builtin.file:
     path: "{{ docker_compose_generator_output_path }}"
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Write docker-compose file
   ansible.builtin.template:
@@ -12,4 +11,4 @@
     dest: "{{ docker_compose_generator_output_path }}/docker-compose.yml"
     owner: "{{ docker_compose_generator_uid }}"
     group: "{{ docker_compose_generator_gid }}"
-    mode: '0644'
+    mode: "0644"
